# HktProto

./: .gitignore  HktProto.uproject  HktProtoGenerateProject.bat  MassEntity_사용가이드.md  MassEntity_컴파일에러수정.md  README.md  packaging.bat
.cursor/plans/: hktsimulation_dod_vm_fc423ce7.plan.md
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultGameplayTags.ini  DefaultPlugins.ini
Content/Blueprints/: BP_HktProtoGameMode.uasset  BP_HktProtoPlayerController.uasset  BP_HktProtoRtsCameraPawn.uasset
Content/MassEntity/: BP_HktMassSpawner.uasset  DA_MassNpc_UEMannequin.uasset  DA_MassNpc_UEMannequin2.uasset  DA_MassSquad.uasset
Content/Materials/: M_HktMinimap.uasset
Content/Python/: init_unreal.py
Content/Textures/: RT_HktMinimap.uasset  T_LUT_2.uasset
Plugins/HktBase/: HktBase.uplugin
Plugins/HktClient/: HktClient.uplugin
Plugins/HktGameplay/: HktGameplay.uplugin  ToGemini.md
Plugins/HktGas/: HktGas.uplugin
Plugins/HktGrpc/: HktGrpc.uplugin
Plugins/HktMass/: HktMass.uplugin  README.md  STRUCTURE.md
Plugins/HktMcpBridge/: HktMcpBridge.uplugin
Plugins/HktMcpBridge/McpServer/: README.md  claude_desktop_config_example.json  cursor_mcp_example.json  pyproject.toml
Plugins/HktMcpBridge/McpServer/src/hkt_mcp/: __init__.py  config.py  server.py
Plugins/HktMcpBridge/McpServer/src/hkt_mcp/bridge/: __init__.py  editor_bridge.py  remote_execution.py  runtime_bridge.py
Plugins/HktMcpBridge/McpServer/src/hkt_mcp/tools/: __init__.py  asset_tools.py  level_tools.py  query_tools.py  runtime_tools.py
Source/: HktProto.Target.cs  HktProtoEditor.Target.cs
(+812 files in other folders)
